--- a/functions/package.json
+++ b/functions/package.json
@@ -14,7 +14,9 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0"
+    "firebase-functions": "^3.11.0",
+    "firebase-tools": "^9.22.0",
+    "global": "^4.4.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
