--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "date-fns": "^2.25.0",
     "firebase": "^9.4.1",
     "firebase-tools": "^9.22.0",
     "global": "^4.4.0",
