--- a/firebase.json
+++ b/firebase.json
@@ -19,5 +19,22 @@
         "destination": "/index.html"
       }
     ]
+  },
+  "emulators": {
+    "functions": {
+      "port": 5001
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "database": {
+      "port": 9000
+    },
+    "hosting": {
+      "port": 4000
+    },
+    "ui": {
+      "enabled": true
+    }
   }
 }
