--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "@testing-library/user-event": "^12.1.10",
     "date-fns": "^2.25.0",
     "firebase": "^9.4.1",
-    "firebase-tools": "^9.22.0",
+    "firebase-tools": "6.12.0",
     "global": "^4.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.4",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
