--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "date-fns": "^2.25.0",
     "firebase": "^9.4.1",
-    "firebase-tools": "6.12.0",
+    "firebase-tools": "^9.23.0",
     "global": "^4.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
