--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,8 @@
     "firebase-admin": "^10.0.0",
     "firebase-functions": "^3.16.0",
     "firebase-tools": "7.2.3",
-    "global": "^4.4.0"
+    "global": "^4.4.0",
+    "isomorphic-fetch": "^3.0.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
